eft forms udpated

--- a/src/pdf-forms/arbella-EFT.html
+++ b/src/pdf-forms/arbella-EFT.html
@@ -87,6 +87,9 @@
             <div class="signature-info">
                 <div class="answer a1"><input class="fs-12" type="date" value="" /></div>
                 <div class="answer a2"><input class="fs-12" type="date" value="" /></div>
+                <div class="answer a3">
+                    <img src="../images/RTA-form/rertapdfstamp/Arbella Maip Stamp.png" alt="">
+                </div>
             </div>
 
 
