--- a/src/pdf-forms/safec-eft.html
+++ b/src/pdf-forms/safec-eft.html
@@ -66,6 +66,9 @@
                 <div class="answer a1"><input type="text" value="Name" /></div>
                 <div class="answer a2"><input type="text" value="Acc Number" /></div>
                 <div class="answer a3"><input type="date" value="" /></div>
+                <div class="answer a4">
+                    <img src="../images/RTA-form/rertapdfstamp/Safety MAIP.png" alt="">
+                </div>
             </div>
 
 
