--- a/src/pdf-forms/safety-eft-form.html
+++ b/src/pdf-forms/safety-eft-form.html
@@ -60,7 +60,7 @@
 
     <div class="page page-1">
         <img src="../images/RTA-form/safety-ef-form.svg" class="form-img" />
-        <div class="page-details safety-ef-form">
+        <div class="page-details safety-eft-form">
             <div class="insured-info">
                 <div class="answer a0"><input type="text" value="Jhone Doe" /></div>
                 <div class="answer a1"><input type="text" value="XSDFGSD7545" /></div>
@@ -87,6 +87,9 @@
 
             <div class="signature-info">
                 <div class="answer a1"><input class="fs-14" type="date" value="" /></div>
+                <div class="answer a2">
+                    <img src="../images/RTA-form/rertapdfstamp/Stamp Safety.png" alt="">
+                </div>
             </div>
 
 
