--- a/src/pdf-forms/travelers-card-EFT.html
+++ b/src/pdf-forms/travelers-card-EFT.html
@@ -76,12 +76,9 @@
                 <div class="answer a9"><input type="date" value="" /></div>
                 <div class="answer a10 a10-1"><span class="check-mark"></span></div>
                 <div class="answer a11 a11-1"><span class="check-mark"></span></div>
-            </div>
-            <div class="signature-info">
-                <div class="answer a0"><input type="text" value="HR" /></div>
-                <div class="answer a1"><input type="text" value="MM" /></div>
-                <div class="answer a2"><input type="text" value="DD" /></div>
-                <div class="answer a3"><input type="text" value="YYYY" /></div>
+                <div class="answer a12">
+                    <img src="../images/RTA-form/rertapdfstamp/travelers stamp isadora.png" alt="">
+                </div>
             </div>
 
 
