--- a/src/pdf-forms/travelers-card-EFT.html
+++ b/src/pdf-forms/travelers-card-EFT.html
@@ -45,7 +45,7 @@
 
 
     <link rel="icon" href="../images/favicon.png" type="image/gif" sizes="16x16">
-    <link rel="stylesheet" href="../assets/css/main.css">
+    <link rel="stylesheet" href="../scss/pages/trevelor-eft-autopay.css">
     <style>
         body {
             width: 790px;
